CSS/generalStyles.css
body{
	height:100%;
	width:100%;
}

img{
  image-rendering: optimizeSpeed;
  image-rendering: -moz-crisp-edges;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: -o-crisp-edges;
  image-rendering: pixelated;
  -ms-interpolation-mode: nearest-neighbor;
}

.mapBox{
	position:absolute;
	top:0px;
	left:0px;
	height:100%;
	width:100%;
	background-image: url("../IMG/background.png");
    background-repeat: repeat;
}

.charDiv{
	height:32px;
	width:32px;
}

.hoverImage:hover{
	cursor: pointer;
	filter: brightness(160%);
}

.dimImage{
	filter: brightness(60%);
}

.hoverBrown:hover{
	background-color: #965b1f !important;
	cursor: pointer !important;
}

.hoverTan:hover{
	background-color: #f2e4cc !important;
	cursor: pointer !important;
}

.healthBarBack{
	position: absolute;
	width: 28px;
	height: 2px;
	left: 2px;
	top: 28px;
	background-color: dimgray;
}

.healthBarFront{
	position: absolute;
	height: 2px;
	left: 2px;
	top: 28px;
}

.healthBarBorder{
	position: absolute;
	width: 27px;
	height: 1px;
	left: 2px;
	top: 28px;
	border: 1px solid black;
}

.infoElement{
	position: absolute;
	border-radius: 10px;
}

.rightIndented{
	position: absolute;
	margin-top:5px;
}

.popOutHeader{
	margin-top:5px;
}

.popOutBody{
	margin-top:25px;
}

.popOutText{
	font-size:12px;
	position: absolute;
	margin-left:5px;
	margin-right:5px;
}

.popOutTextSpacing{
	margin-top:5px;
}

.glowBox{
	position:absolute;
	height:31px;
	width:31px;
	display:inline-block;
}

.glowBox:hover{
	box-shadow: 0px 0px 10px #00ffff;
	z-index:1;
}

.glowBoxIndent{
	margin-left:33px;
}

.absolutePos{
	position:absolute;
}

.mapCharCentered{
	margin: auto;
	position: absolute;
	left:0;
	right: 0;
	top: 0;
	bottom: 0;  
}

.mapCharOffsetLeft{
	position:absolute;
	left:-6px;
	top:-3px;
}

.mapCharOffsetRight{
	position:absolute;
	left:6px;
	top:3px;
}

.mapCharOffsetNone{
	position:absolute;
	left:0px;
	top:0px;
}

.floatAbove{
	z-index:3;
}

.floatAbove:hover{
	z-index:4;
}

.customDivider{
	position:absolute;
	width:96%;
	height:1px;
	left:2%;
	background-color: white;	
}

.itemNamePos{
	font-size: 14px !important;
	top: 4px;
}

.itemRankPos{
	top: 5px;
	right: 0px;
	text-align: right;
}

.itemMightPos{
	top:25px;
}

.itemWeightPos{
	top:40px;
}

.itemNotesPos{
	top:95px;
}

.centerText{ text-align: center; }
.rightText{ text-align: right; }
.whiteText{ color: white; }
.redText{ color: #491107; }
.tanText{ color: #E5C68D; }
.boldText{ font-weight: bold; }
.italicText{ font-style: italic; }

.navy{ background-color: #332F40; }
.bloodRed{ background-color: #8e0000; }
.paleTan{ background-color: #E5C68D; }
.lightTan{ background-color: #e5d0aa; }
.darkTan{ background-color: #BA7228; }
.olive{ background-color: #490200; }
.lightGreen{ background-color: #39af2b; }
.red{ background-color: red; }
.skyBlue{ background-color: #00d8ff; }
.green{ background-color: #216619; opacity: 0.95;}
.blackBorder{ border: 1px solid black; }

.scroll-up {	
 overflow: hidden;
 position: relative;
}
.scroll-up p {
 position: absolute;
 width: 100%;
 height: 100%;
 margin: 0;
 line-height: 14px;
 /* Starting position */
 -moz-transform:translateY(100%);
 -webkit-transform:translateY(100%);	
 transform:translateY(100%);
 /* Apply animation to this element */	
 -moz-animation: scroll-up 8s linear infinite;
 -webkit-animation: scroll-up 8s linear infinite;
 animation: scroll-up 8s linear infinite;
}
/* Move it (define the animation) */
@-moz-keyframes scroll-up {
 0%   { -moz-transform: translateY(100%); }
 100% { -moz-transform: translateY(-100%); }
}
@-webkit-keyframes scroll-up {
 0%   { -webkit-transform: translateY(100%); }
 100% { -webkit-transform: translateY(-100%); }
}
@keyframes scroll-up {
 0%   { 
 -moz-transform: translateY(100%); /* Browser bug fix */
 -webkit-transform: translateY(100%); /* Browser bug fix */
 transform: translateY(100%); 		
 }
 100% { 
 -moz-transform: translateY(-100%); /* Browser bug fix */
 -webkit-transform: translateY(-100%); /* Browser bug fix */
 transform: translateY(-100%); 
 }
}

